package org.example.expensemanager.model;

public enum RoleName {
  ADMIN,
  EMPLOYER
}
